--- a/index.html
+++ b/index.html
@@ -204,62 +204,50 @@
         // 绘制转盘 - 使用CSS方式修复
         function drawWheel() {
     const sectionCount = sections.length;
-    const angle = 360 / sectionCount;
+    const angle = 2 * Math.PI / sectionCount;
 
     wheelElement.innerHTML = '';
 
-    // 创建容器用于旋转
-    const container = document.createElement('div');
-    container.style.position = 'relative';
-    container.style.width = '100%';
-    container.style.height = '100%';
+    // 创建canvas元素
+    const canvas = document.createElement('canvas');
+    canvas.width = 500;
+    canvas.height = 500;
+    canvas.style.borderRadius = '50%';
 
-    // 为每个扇形创建独立的SVG
+    const ctx = canvas.getContext('2d');
+    const centerX = canvas.width / 2;
+    const centerY = canvas.height / 2;
+    const radius = canvas.width / 2;
+
+    // 绘制每个扇形
     for (let i = 0; i < sectionCount; i++) {
-        const startAngle = i * angle - 90;
-        const endAngle = (i + 1) * angle - 90;
+        const startAngle = i * angle - Math.PI / 2;
+        const endAngle = (i + 1) * angle - Math.PI / 2;
 
-        const svgNS = "http://www.w3.org/2000/svg";
-        const svg = document.createElementNS(svgNS, "svg");
-        svg.setAttribute("style", "position:absolute; top:0; left:0; width:100%; height:100%;");
+        // 绘制扇形
+        ctx.beginPath();
+        ctx.moveTo(centerX, centerY);
+        ctx.arc(centerX, centerY, radius, startAngle, endAngle);
+        ctx.closePath();
+        ctx.fillStyle = sections[i].color;
+        ctx.fill();
 
-        const path = document.createElementNS(svgNS, "path");
-        const largeArcFlag = angle > 180 ? 1 : 0;
-
-        // 计算起点和终点坐标
-        const x1 = 250 + 250 * Math.cos(startAngle * Math.PI / 180);
-        const y1 = 250 + 250 * Math.sin(startAngle * Math.PI / 180);
-        const x2 = 250 + 250 * Math.cos(endAngle * Math.PI / 180);
-        const y2 = 250 + 250 * Math.sin(endAngle * Math.PI / 180);
-
-        const pathData = `M 250,250 L ${x1},${y1} A 250,250 0 ${largeArcFlag},1 ${x2},${y2} Z`;
-        path.setAttribute("d", pathData);
-        path.setAttribute("fill", sections[i].color);
-
-        svg.appendChild(path);
-
-        // 添加文字
-        const textAngle = (i * angle + angle / 2 - 90) * Math.PI / 180;
-        const textRadius = 180;
-        const textX = 250 + textRadius * Math.cos(textAngle);
-        const textY = 250 + textRadius * Math.sin(textAngle);
-
-        const text = document.createElementNS(svgNS, "text");
-        text.setAttribute("x", textX);
-        text.setAttribute("y", textY);
-        text.setAttribute("fill", "white");
-        text.setAttribute("font-weight", "bold");
-        text.setAttribute("font-size", "14px");
-        text.setAttribute("text-anchor", "middle");
-        text.setAttribute("dominant-baseline", "middle");
-        text.setAttribute("text-shadow", "1px 1px 2px black");
-        text.textContent = sections[i].text;
-
-        svg.appendChild(text);
-        container.appendChild(svg);
+        // 绘制文字
+        ctx.save();
+        ctx.translate(centerX, centerY);
+        ctx.rotate(startAngle + angle / 2);
+        ctx.textAlign = "right";
+        ctx.fillStyle = "white";
+        ctx.font = "bold 16px Arial";
+        ctx.shadowColor = "black";
+        ctx.shadowBlur = 2;
+        ctx.shadowOffsetX = 1;
+        ctx.shadowOffsetY = 1;
+        ctx.fillText(sections[i].text, radius - 70, 10);
+        ctx.restore();
     }
 
-    wheelElement.appendChild(container);
+    wheelElement.appendChild(canvas);
 }
 
         // 开始抽奖
